--- a/lab09/prj/TestDriver/TestDriver.cbp
+++ b/lab09/prj/TestDriver/TestDriver.cbp
@@ -13,7 +13,12 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="../../prj" />
 				</Compiler>
+				<Linker>
+					<Add library="../ModulesChaban/bin/Debug/libModulesChaban.a" />
+					<Add directory="../ModulesChaban/bin/Debug" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/TestDriver" prefix_auto="1" extension_auto="1" />
